2004-05-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/document.cpp (sp_document_create): 
	* src/preferences-skeleton.h:
	  Use INKSCAPE_VERSION from inkscape_version.h instead of VERSION.

	* src/libnr/nr-rotate-test.cpp: Use new rotate_equalp function. 

	* src/libnr/nr-translate-ops.h (operator-): New function.

	* src/select-context.cpp:
	* src/selection-chemistry.cpp:
	* src/xml/repr.h:
	* src/sp-defs.h:
	  Cleanup: greater conformance to CodingStyle.

	* src/libnr/nr-macros.h: Don't #include nr-matrix.h, nr-rect.h.

	* src/arc-context.h, src/desktop-affine.h, src/dir-util.h,
	  src/draw-context.h, src/dyna-draw-context.h, src/help.h,
	  src/knotholder.h, src/prefs-utils.h, src/select-toolbar.h,
	  src/sp-clippath.h, src/sp-mask.h, src/sp-pattern.h, src/sp-use.h,
	  src/text-context.h, src/toolbox.h, src/tools-switch.h,
	  src/dialogs/dialog-events.h, src/dialogs/sp-attribute-widget.h,
	  src/display/sp-canvas.h, src/helper/gnome-utils.h,
	  src/helper/png-write.h, src/helper/stock-items.h, src/inkjar/jar.h,
	  src/libnr/nr-matrix.cpp, src/libnr/nr-point-l.h,
	  src/svg/stringstream.h, src/svg/svg-affine.cpp,
	  src/widgets/gradient-selector.h, src/widgets/paint-selector.h,
	  src/widgets/spinbutton-events.h, src/widgets/spw-utilities.h,
	  src/xml/repr-action.h:
	  Add missing header files.

	* src/libnr/nr-rotate-fns.h, src/libnr/nr-rotate-fns.cpp: New files.
	* src/libnr/nr-rotate-fns-test.cpp: New unit test.
	* src/libnr/Makefile_insert, src/Makefile.am: Reference new files,
	  add to unit tests.

	* src/libnr/nr-rotate.h: Add Coord,Coord constructor.

	* src/libnr/nr-rotate.h, src/libnr/nr-rotate-ops.h (operator*=):
	New method.

	* src/libnr/nr-point-fns.h (point_equalp): New function.

	* src/radial.h: Remove this unused header.

	* src/xml/xml-forward.h: New file.
	* src/xml/Makefile_insert: Add it to xml_libspxml_a_SOURCES.
	* src/xml/repr-private.h: Include it.

2004-05-16  MenTaLguY  <mental@rydia.net>
